@@ -15,24 +15,21 @@ import reactor.core.publisher.Mono;
 import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 @Slf4j
 public class IncomingInstanceMappingService implements InstanceMapper<KafkaAltinnInstance> {
 
     public static final String EMPTY_STRING = "";
-    private record DocumentEntry(String reference, String id, MediaType type) {}
+
+    private record DocumentEntry(String reference, String id, MediaType type) {
+    }
 
     private static final Map<String, Map<String, String>> DOCUMENT_MAPPINGS = Map.of(
             "ref-data-as-pdf", Map.of(
                     "prefix", "soknad",
                     "title", "Søknadsskjema"),
-            "dom-forelegg", Map.of(
-                    "prefix", "domForelegg",
-                    "title", "Kopi av eventuelle dom/forelegg"),
-            "beskrivelse-yrkestransportloven", Map.of(
-                    "prefix", "beskrivelse",
-                    "title", "Håndtering av Yrkestransportloven § 9 c og d"),
             "politiattest-foretak", Map.of(
                     "prefix", "politiattestForetak",
                     "title", "Politiattest for foretaket"),
@@ -47,6 +44,18 @@ public class IncomingInstanceMappingService implements InstanceMapper<KafkaAltin
                     "title", "Konkursattest for daglig leder")
     );
 
+    private static final Map<String, Map<String, String>> DOM_FORELEGG_COLLECTION_MAPPINGS = Map.of(
+            "dom-forelegg", Map.of(
+                    "prefix", "domForelegg",
+                    "title", "Kopi av eventuelle dom/forelegg")
+    );
+
+    private static final Map<String, Map<String, String>> BESKRIVELSE_COLLECTION_MAPPINGS = Map.of(
+            "beskrivelse-yrkestransportloven", Map.of(
+                    "prefix", "beskrivelse",
+                    "title", "Håndtering av Yrkestransportloven § 9 c og d")
+    );
+
     private final AltinnFileService altinnFileService;
 
     public IncomingInstanceMappingService(AltinnFileService altinnFileService) {
@@ -57,63 +66,110 @@ public class IncomingInstanceMappingService implements InstanceMapper<KafkaAltin
     public Mono<InstanceObject> map(Long sourceApplicationId, KafkaAltinnInstance incomingInstance, Function<File, Mono<UUID>> persistFile) {
         log.info("Mapping incoming instance: {}, sourceApplicationId={}", incomingInstance, sourceApplicationId);
 
-        return Flux.fromIterable(new ArrayList<>(DOCUMENT_MAPPINGS.keySet()))
+        Mono<List<DocumentEntry>> mandatoryDocuments = mapDocuments(DOCUMENT_MAPPINGS.keySet(),
+                incomingInstance, sourceApplicationId,  persistFile);
+        Mono<List<DocumentEntry>> domForeleggDocuments = mapDocuments(DOM_FORELEGG_COLLECTION_MAPPINGS.keySet(),
+                incomingInstance, sourceApplicationId,  persistFile);
+        Mono<List<DocumentEntry>> beskrivelseDocuments = mapDocuments(BESKRIVELSE_COLLECTION_MAPPINGS.keySet(),
+                incomingInstance, sourceApplicationId,  persistFile);
+
+        return Mono.zip(mandatoryDocuments, domForeleggDocuments, beskrivelseDocuments)
+                .map(zip -> InstanceObject.builder()
+                        .valuePerKey(toValuePerKey(incomingInstance, zip.getT1()))
+                        .objectCollectionPerKey(
+                                Map.of("domForelegg", mapCollections(zip.getT2(), DOM_FORELEGG_COLLECTION_MAPPINGS),
+                                        "beskrivelse", mapCollections(zip.getT3(), BESKRIVELSE_COLLECTION_MAPPINGS)
+                                ))
+                        .build()
+                );
+    }
+
+    private Mono<List<DocumentEntry>> mapDocuments(Set<String> refs, KafkaAltinnInstance incomingInstance,
+                                                   Long sourceApplicationId,
+                                                   Function<File, Mono<UUID>> persistFile) {
+        return Flux.fromIterable(refs)
                 .flatMap(ref -> altinnFileService.fetchFile(incomingInstance.getInstanceId(), ref, sourceApplicationId)
-                        .flatMap(file -> {
-                            log.info("Downloaded file ({}) for {}", file, ref);
-                            return persistFile.apply(file)
-                                    .map(uuid -> {
-                                        log.info("Persisted file {} to FLYT with uuid {}", ref, uuid);
-                                        return new DocumentEntry(ref, uuid.toString(), file.getType());
-                                    })
-                                    .doOnError(throwable -> {
-                                        throw new RuntimeException(String.format("Ups! Not able to persist %s the FINT Flyt way.",
-                                                file.getName()), throwable);});
-                        }))
-                .doOnError(throwable -> {
-                    throw new RuntimeException("Ups!", throwable);
+                        .flatMap(file -> persistFile.apply(file)
+                                .map(uuid -> {
+                                    log.info("Persisted file {} to FLYT with uuid {}", ref, uuid);
+                                    return new DocumentEntry(ref, uuid.toString(), file.getType());
+                                })
+                                .doOnError(e -> {
+                                    throw new RuntimeException("Failed to persist " + file.getName(), e);
+                                }))
+                        .doOnNext(file -> log.info("Downloaded file ({}) for {}", file, ref))
+                )
+                .doOnError(e -> {
+                    throw new RuntimeException("Error mapping files", e);
                 })
-                .collect(Collectors.toList())
-                .map(documentEntries -> InstanceObject.builder()
-                        .valuePerKey(toValuePerKey(incomingInstance, documentEntries))
-                        .build());
+                .collect(Collectors.toList());
+    }
+
+    private List<InstanceObject> mapCollections(List<DocumentEntry> entries, Map<String, Map<String, String>> mapping) {
+        return entries.stream()
+                .map(entry -> getInstanceObject(entry, mapping.get(entry.reference())))
+                .toList();
+    }
+
+    private InstanceObject getInstanceObject(DocumentEntry documentEntry, Map<String, String> values) {
+        String prefix = values.get("prefix");
+        List<Map.Entry<String, String>> entries = new ArrayList<>();
+        entries.add(Map.entry(prefix + "Tittel", values.get("title")));
+        entries.add(Map.entry(prefix + "Format", String.valueOf(documentEntry.type())));
+        entries.add(Map.entry(prefix + "Fil", documentEntry.id()));
+
+        return InstanceObject.builder()
+                .valuePerKey(entries.stream()
+                        .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)))
+                .build();
     }
 
     private Map<String, String> toValuePerKey(KafkaAltinnInstance incomingInstance, List<DocumentEntry> documents) {
         log.info("Mapping incoming instance with {} documents: {}", documents.size(), documents);
 
-        List<Map.Entry<String, String>> entries = new ArrayList<>();
+        Stream<Map.Entry<String, String>> virksomhet = Stream.of(
+                entry("virksomhetOrganisasjonsnummer", incomingInstance.getOrganizationNumber()),
+                entry("virksomhetOrganisasjonsnavn", incomingInstance.getOrganizationName()),
+                entry("virksomhetEpostadresse", incomingInstance.getCompanyEmail()),
+                entry("virksomhetTelefonnummer", emptyIfNull(incomingInstance.getCompanyPhone())),
+                entry("virksomhetFylke", incomingInstance.getCountyName()),
+                entry("virksomhetKommune", emptyIfNull(incomingInstance.getMunicipalityName())),
+                entry("virksomhetGateadresse", incomingInstance.getCompanyAdressStreet()),
+                entry("virksomhetPostnummer", incomingInstance.getCompanyAdressPostcode()),
+                entry("virksomhetPoststed", incomingInstance.getCompanyAdressPostplace())
+        );
 
-        entries.add(Map.entry("virksomhetOrganisasjonsnummer", incomingInstance.getOrganizationNumber()));
+        Stream<Map.Entry<String, String>> postadresse = Stream.of(
+                entry("postadresseGateadresse", emptyIfNull(incomingInstance.getPostalAdressStreet())),
+                entry("postadressePostnummer", emptyIfNull(incomingInstance.getPostalAdressPostcode())),
+                entry("postadressePoststed", emptyIfNull(incomingInstance.getPostalAdressPostplace()))
+        );
 
-        entries.add(Map.entry("virksomhetOrganisasjonsnavn", incomingInstance.getOrganizationName()));
-        entries.add(Map.entry("virksomhetEpostadresse", incomingInstance.getCompanyEmail()));
-        entries.add(Map.entry("virksomhetTelefonnummer", emptyIfNull(incomingInstance.getCompanyPhone())));
-        entries.add(Map.entry("virksomhetFylke", incomingInstance.getCountyName()));
-        entries.add(Map.entry("virksomhetKommune", emptyIfNull(incomingInstance.getMunicipalityName())));
-        entries.add(Map.entry("virksomhetGateadresse", incomingInstance.getCompanyAdressStreet()));
-        entries.add(Map.entry("virksomhetPostnummer", incomingInstance.getCompanyAdressPostcode()));
-        entries.add(Map.entry("virksomhetPoststed", incomingInstance.getCompanyAdressPostplace()));
+        Stream<Map.Entry<String, String>> dagligLeder = Stream.of(
+                entry("dagligLederFødselsnummer", emptyIfNull(incomingInstance.getManagerSocialSecurityNumber())),
+                entry("dagligLederFornavn", emptyIfNull(incomingInstance.getManagerFirstName())),
+                entry("dagligLederEtternavn", emptyIfNull(incomingInstance.getManagerLastName())),
+                entry("dagligLederEpostadresse", emptyIfNull(incomingInstance.getManagerEmail())),
+                entry("dagligLederTelefonnummer", emptyIfNull(incomingInstance.getManagerPhone()))
+        );
 
-        entries.add(Map.entry("postadresseGateadresse", emptyIfNull(incomingInstance.getPostalAdressStreet())));
-        entries.add(Map.entry("postadressePostnummer", emptyIfNull(incomingInstance.getPostalAdressPostcode())));
-        entries.add(Map.entry("postadressePoststed", emptyIfNull(incomingInstance.getPostalAdressPostplace())));
+        Stream<Map.Entry<String, String>> dokumenter = documents.stream()
+                .flatMap(doc -> {
+                    Map<String, String> values = DOCUMENT_MAPPINGS.get(doc.reference());
+                    String prefix = values.get("prefix");
+                    return Stream.of(
+                            entry(prefix + "Tittel", values.get("title")),
+                            entry(prefix + "Format", String.valueOf(doc.type())),
+                            entry(prefix + "Fil", doc.id())
+                    );
+                });
 
-        entries.add(Map.entry("dagligLederFødselsnummer", emptyIfNull(incomingInstance.getManagerSocialSecurityNumber())));
-        entries.add(Map.entry("dagligLederFornavn", emptyIfNull(incomingInstance.getManagerFirstName())));
-        entries.add(Map.entry("dagligLederEtternavn", emptyIfNull(incomingInstance.getManagerLastName())));
-        entries.add(Map.entry("dagligLederEpostadresse", emptyIfNull(incomingInstance.getManagerEmail())));
-        entries.add(Map.entry("dagligLederTelefonnummer", emptyIfNull(incomingInstance.getManagerPhone())));
+        return Stream.concat(Stream.concat(Stream.concat(virksomhet, postadresse), dagligLeder), dokumenter)
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+    }
 
-        documents.forEach(documentEntry -> {
-            Map<String, String> values = DOCUMENT_MAPPINGS.get(documentEntry.reference());
-            String prefix = values.get("prefix");
-            entries.add(Map.entry(prefix + "Tittel", values.get("title")));
-            entries.add(Map.entry(prefix + "Format", String.valueOf(documentEntry.type())));
-            entries.add(Map.entry(prefix + "Fil", documentEntry.id()));
-        });
-
-        return entries.stream().collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+    private Map.Entry<String, String> entry(String key, String value) {
+        return Map.entry(key, value);
     }
 
     private String emptyIfNull(String value) {
